<resources>
    <string name="app_name">TimeTracker</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="press_to_add_task">Press to add task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="time_tracker">Time Tracker</string>
    <string name="jul_26_2022">Jul 26, 2022</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="all_day">All Day</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="_1_00_pm">1:00 PM</string>
    <string name="task_created">Task Created</string>
    <string name="_1_00_00">1:00:00</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_4">Task 4</string>
    <string name="task_5">Task 5</string>
    <string name="task_6">Task 6</string>
    <string name="task_3">Task 3</string>
</resources>